--- a/src/index.css
+++ b/src/index.css
@@ -35,4 +35,15 @@ html, body, #root {
 ::-webkit-scrollbar-thumb {
   background: #333;
   border-radius: 8px;
+}
+
+/* Hide number input spinners for Chrome, Safari, Edge */
+.no-spinner::-webkit-outer-spin-button,
+.no-spinner::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+/* Hide number input spinners for Firefox */
+.no-spinner[type=number] {
+  -moz-appearance: textfield;
 } 
